# elhub-python-sdk

./: .bumpversion.cfg  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  makefile  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  pages.yml  preview.yml  release.yml
docs/: api.md  installation.md  usage.md
elhub_sdk/: __init__.py  acknolwedgment.py  client.py  constants.py  consumption.py  elhub_sdk.py  enrollment.py  enums.py  settings.py  third_party.py
tests/: __init__.py  ag611-01-actor-test.py  ag622-01-actor-test.py  ag622-02-actor-test.py  config.py  test_elhub_python_sdk.py  test_elhub_sdk.py  test_integration.py  test_integration_soap.py
tests/tests_examples/: README.md  ag611-01-actor-test.py  ag622-01-actor-test.py  ag622-02-actor-test.py  config.py
wsdl/bim/: Acknowledgement.xsd
wsdl/bim v22 sorted/: Elhub_BusinessDataType_v22_sorted.xsd
wsdl/bim/common/: Elhub_AggregatedBusinessInformationEntities.xsd
wsdl/bim/market/: NotifyEndOfSupply.xsd  RejectEndOfSupply.xsd  RejectStartOfSupply.xsd
wsdl/bim/query/: RequestUpfrontMeteringPointCharacteristics.xsd  ResponseFromGridAccessProvider.xsd  ResponseUpfrontMeteringPointCharacteristics.xsd
wsdl/bim/thirdpartyaccess/: UpdateThirdPartyAccess.xsd
wsdl/local/2.3/bim/: Acknowledgement.xsd  PollForData.xsd
wsdl/local/2.3/bim v22 sorted/: Elhub_AggregatedBusinessInformationEntities_v22_sorted.xsd  Elhub_BusinessDataType_v22_sorted.xsd
wsdl/local/2.3/example xmls/: Acknowledgement.xml  (+35 more)
wsdl/wsdl/: MarketProcesses - WS-Security.wsdl  MarketProcesses.wsdl  MeteringValues - WS-Security.wsdl  MeteringValues.txt  MeteringValues.wsdl  PollMarketProcesses - WS-Security.wsdl  PollMarketProcesses.wsdl  PollMeteringValues.txt  PollMeteringValues.wsdl  PollMeteringValues_ws_security.wsdl  Query.txt  Query.wsdl  Query_ws_security.wsdl  response.xml
wsdl/wsdl/example xmls/: Acknowledgement.xml  CollectedData_EstimatedYearlyConsumption.xml  ConfirmEndOfSupply.xml  ConfirmStartOfSupply.xml  NotifyMeteringPointCharacteristics_15Mins.xml  NotifyStartOfSupply.xml  NotifyValidatedDataForBillingEnergy_15Mins.xml  PriceVolumeCombinationForReconciliation_15Mins.xml  RequestEndOfSupply.xml  RequestToGridAccessProvider.xml  RequestUpdateCustomerInformation.xml  RequestUpdateMasterDataMeteringPoint.xml  ResponseFromGridAccessProvider.xml  ResponseUpfrontMeteringPointCharacteristics.xml  ResponseUpfrontMeteringPointCharacteristics_15Mins.xml  UpdateThirdPartyAccess.xml
wsdl/wsdl/xsd/: MarketProcesses.xsd  PollMeteringValues.xsd
(+83 files in other folders)
